alignment issues on mobile fixed

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 #submit,
 #next {
   visibility: hidden;
-  margin: 0em 4rem;
+  margin: 0em 1rem;
 }
 #scoreDiv {
   margin-top: 5em;
